--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,12 @@
-[package]
-name = "rpcbind-rs"
-version = "0.1.0"
-edition = "2024"
-license = "MIT"
+[workspace]
+resolver = "3"
 
-[dependencies]
-anyhow = "1.0.98"
+members = ["rpcbind-rs", "rpcbind-server"]
+
+[workspace.dependencies]
 bytes = "1.10.1"
-thiserror = "2.0.12"
 onc-rpc = { version = "0.3.1", features = ["bytes"] }
 facet = "0.27.16"
 facet-xdr = "0.1.19"
-nix = { version = "0.30.1", features = ["net"], default-features = false }
+
+rpcbind-rs.path = "rpcbind-rs"
